--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,11 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.6-bin.jar=D:\\Documentos\\mysql-connector-java-5.1.6-bin.jar
+file.reference.mysql-connector-java-5.1.6-bin.jar-1=mysql-connector-java-5.1.6-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.6-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.6-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.6-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -69,7 +71,7 @@ main.class=AEREOSTARS.aereostars
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
